# neura

./: .gitignore  .gitmodules
backend/neura/: hello.py  pyproject.toml
backend/neura/py_neuro/: .gitignore  main.py  models.py  requirements.txt
backend/neura/py_neuro/routers/: knowledge_graph.py  study_guide.py
backend/neura/python_chatedu_api/: .env.example  .gitignore  config.py  crud.py  db.py  main2.py  models.py  requirements.txt
backend/neura/python_chatedu_api/routers/: knowledge_graph.py  study_guide.py  topics.py  workspaces.py
backend/py_neuro/: .dockerignore  Dockerfile  __init__.py  config.py  crud.py  database.py  db.py  main.py  models.py  pyproject.toml  requirements.txt  requirements2.txt
backend/py_neuro/routers/: __init__.py  files.py  knowledge_graph.py  study_guide.py  topics.py  utils.py  workspaces.py
backend/python_chatedu_api/: database.py  main.py
backend/python_chatedu_api/routers/: knowledge_graph.py  study_guide.py
frontend/neura/: Dockerfile  next.config.ts  package-lock.json  package.json
frontend/neura/src/: react-syntax-highlighter.d.ts
frontend/neura/src/app/: globals.css  layout.tsx
frontend/neura/src/app/w/: page.tsx
frontend/neura/src/components/: sections-sidebar.tsx
frontend/neura/src/components/landingPage/: CallToValue.tsx  Footer.tsx  GettingStarted.tsx  Pricing.tsx  data.ts  index.tsx
frontend/neura/src/data/: workspace.ts
frontend/neura/src/hooks/: use-file-upload.tsx
frontend/neura/src/lib/: utils.ts
frontend/neura/src/store/: files.ts  sidebar.ts
frontend/neura/src/types/: notebook.ts
(+33 files in other folders)
